--- a/WebContent/assets/css/main.css
+++ b/WebContent/assets/css/main.css
@@ -162,21 +162,22 @@ input, select, textarea {
 	em, i {
 		font-style: italic;
 	}
-
-	a {
-		text-decoration: none;
-		color: inherit;
-		border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
-		-moz-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		-webkit-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		-ms-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
-		outline: 0;
-	}
-
+	
+ 
+	 a {
+      text-decoration: none;
+      color: inherit;
+      border-bottom: dotted 1px rgba(128, 128, 128, 0.5);
+      -moz-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+      -webkit-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+      -ms-transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+      transition: color 0.35s ease-in-out, border-bottom-color 0.35s ease-in-out;
+      outline: 0;
+   }
 		a:hover {
 			color: #E27689;
 			border-bottom-color: rgba(255, 255, 255, 0);
+			font-weight: bolder;
 		}
 
 	sub {
@@ -2035,9 +2036,17 @@ input, select, textarea {
  .header1 {
   background-color: #f1f1f1;
   padding: 30px;
-  text-align: center;
-  font-size: 35px;
+  text-align: right;
+  font-size: 20px;
+  color: gray;
 }
+
+.mypage_span {
+ margin-left:20px;
+}
+
+
+
 	#header2 {
 		display: -moz-flex;
 		display: -webkit-flex;
